# QtHalconVTK

./: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
Config/: SysConfig.cpp  SysConfig.h
CustomizeDialog/: CMakeLists.txt
CustomizeDialog/AboutDialog/: aboutdialog.cpp  aboutdialog.ui
CustomizeDialog/CommonDialog/: commondialog.cpp  commondialog.h  commondialog.ui
CustomizeDialog/SetDialog/: setdialog.cpp  setdialog.h  setdialog.ui
Resource/File/: config.ini
